--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -57,13 +57,16 @@
                                 android:layout_height="match_parent"
                                 android:layout_toRightOf="@id/iv_host_avatar">
 
-                                <com.whzl.mengbi.ui.widget.view.AutoScrollTextView3
+                                <TextView
                                     android:id="@+id/tv_host_name"
                                     android:layout_width="50dp"
                                     android:layout_height="13dp"
                                     android:layout_marginLeft="6dp"
                                     android:layout_marginRight="6dp"
                                     android:layout_marginTop="3dp"
+                                    android:ellipsize="end"
+                                    android:singleLine="true"
+                                    android:textColor="@color/white"
                                     android:textSize="11sp" />
 
 
