--- a/app/src/main/res/anim/slide_in_top.xml
+++ b/app/src/main/res/anim/slide_in_top.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate
+    <alpha
         android:duration="200"
-        android:fromYDelta="-100%"
-        android:startOffset="0"
-        android:toYDelta="0%" />
+        android:fromAlpha="0"
+        android:toAlpha="1" />
 </set>
