--- a/app/src/main/res/layout/item_manager.xml
+++ b/app/src/main/res/layout/item_manager.xml
@@ -9,7 +9,7 @@
         android:layout_height="62dp"
         android:orientation="horizontal">
 
-        <com.whzl.mengbi.ui.widget.view.CircleImageView
+        <ImageView
             android:id="@+id/iv_avatar"
             android:layout_width="44dp"
             android:layout_height="44dp"
