--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -9,7 +9,7 @@
         android:layout_height="62dp"
         android:orientation="horizontal">
 
-        <com.whzl.mengbi.ui.widget.view.CircleImageView
+        <ImageView
             android:id="@+id/iv_avatar"
             android:layout_width="44dp"
             android:layout_height="44dp"
@@ -18,8 +18,8 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
@@ -52,8 +52,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="3dp"
                     android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="3dp"
                     android:singleLine="true"
                     android:textColor="@color/white"
                     android:textSize="15sp" />
