--- a/app/src/main/res/layout/activity_custom_service_center_layout.xml
+++ b/app/src/main/res/layout/activity_custom_service_center_layout.xml
@@ -2,72 +2,75 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/font_color_49"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/white_toolbar" />
+    <include layout="@layout/white_toolbar" />
 
-    <RelativeLayout
-        android:id="@+id/user_custom_official_service_rela"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:background="@color/font_color_51">
+    <include layout="@layout/divider_shawdow_white" />
 
-        <TextView
-            android:id="@+id/user_custom_official_service_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="17dp"
-            android:text="@string/user_custom_fficial_service"
-            android:textColor="@color/font_color_47"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/user_custom_official_service_qq_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:text="@string/user_custom_fficial_service_qq"
-            android:textColor="@color/font_color_50" />
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/user_custom_fficial_service_bottom_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/font_color_12" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:background="@drawable/bg_shawdow_deep"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/padding_12"
+        android:paddingRight="@dimen/padding_12">
 
-    <RelativeLayout
-        android:id="@+id/user_custom_guild_entered_rela"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:background="@color/font_color_51">
 
-        <TextView
-            android:id="@+id/user_custom_guild_entered_text"
+        <RelativeLayout
+            android:id="@+id/user_custom_official_service_rela"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="17dp"
-            android:text="@string/user_custom_guild_entered"
-            android:textColor="@color/font_color_47"
-            android:textSize="18sp" />
+            android:layout_height="49dp">
 
-        <TextView
-            android:id="@+id/user_custom_guild_entered_qq"
+            <TextView
+                android:id="@+id/user_custom_official_service_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/user_custom_fficial_service"
+                android:textColor="#70000000"
+                android:textSize="13sp" />
+
+            <ImageView
+                android:id="@+id/user_custom_official_service_qq_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_qq_custom" />
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/user_custom_fficial_service_bottom_view"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#10000000" />
+
+        <RelativeLayout
+            android:id="@+id/user_custom_guild_entered_rela"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:text="@string/user_custom_guild_entered_qq"
-            android:textColor="@color/font_color_50" />
-    </RelativeLayout>
+            android:layout_height="49dp">
 
+            <TextView
+                android:id="@+id/user_custom_guild_entered_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:text="@string/user_custom_guild_entered"
+                android:textColor="#70000000"
+                android:textSize="13sp" />
+
+            <ImageView
+                android:id="@+id/user_custom_guild_entered_qq"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_qq_custom" />
+        </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
