--- a/app/src/main/res/layout/activity_setting_new.xml
+++ b/app/src/main/res/layout/activity_setting_new.xml
@@ -12,18 +12,18 @@
     <RelativeLayout
         android:id="@+id/rl_binding_phone"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="5dp">
+        android:layout_height="54dp"
+        android:layout_marginTop="18dp"
+        android:background="@drawable/bg_shawdow_deep">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:gravity="center_vertical"
-            android:paddingLeft="13.5dp"
+            android:paddingLeft="@dimen/padding_12"
             android:text="绑定手机"
-            android:textColor="#323232"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textColor="#70000000"
+            android:textSize="13sp" />
 
         <ImageView
             android:id="@+id/iv_arrow"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="@dimen/padding_12"
             android:src="@drawable/arrowright" />
 
         <TextView
@@ -42,75 +42,99 @@
             android:layout_toLeftOf="@id/iv_arrow"
             android:gravity="center_vertical"
             android:text="绑定手机"
-            android:textColor="@color/tran_black5"
-            android:textSize="12sp" />
+            android:textColor="#000000"
+            android:textSize="13sp" />
     </RelativeLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#e5e5e5" />
-
     <TextView
-        android:id="@+id/tv_feedback"
+        android:id="@+id/tv_push_setting"
         style="@style/setting_option_text_style"
-        android:text="@string/user_settings_feed_back" />
+        android:layout_height="54dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/bg_shawdow_deep"
+        android:text="@string/user_settings_push" />
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#e5e5e5" />
-
-    <TextView
-        android:id="@+id/tv_custom"
-        style="@style/setting_option_text_style"
-        android:text="@string/user_settings_custom_service" />
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#e5e5e5" />
-
-    <TextView
-        android:id="@+id/about_us"
-        style="@style/setting_option_text_style"
-        android:text="@string/user_settings_about" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#e5e5e5" />
-
-    <RelativeLayout
-        android:id="@+id/rl_version_container"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/comm_white">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/bg_shawdow_deep"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="13.5dp"
-            android:gravity="center"
-            android:text="@string/upgrade"
-            android:textColor="#323232"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:id="@+id/tv_feedback"
+            style="@style/setting_option_text_style"
+            android:text="@string/user_settings_feed_back" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="@dimen/padding_12"
+            android:layout_marginRight="@dimen/padding_12"
+            android:background="#10000000" />
 
         <TextView
-            android:id="@+id/tv_version_name"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:textColor="#646464"
-            android:textSize="12sp" />
+            android:id="@+id/tv_custom"
+            style="@style/setting_option_text_style"
+            android:text="@string/user_settings_custom_service" />
 
-    </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="@dimen/padding_12"
+            android:layout_marginRight="@dimen/padding_12"
+            android:background="#10000000" />
+
+        <RelativeLayout
+            android:id="@+id/rl_version_container"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:background="@color/comm_white">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/padding_12"
+                android:gravity="center"
+                android:text="@string/upgrade"
+                android:textColor="#70000000"
+                android:textSize="13sp" />
+
+            <ImageView
+                android:id="@+id/iv_arrow_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/padding_12"
+                android:src="@drawable/arrowright" />
+
+            <TextView
+                android:id="@+id/tv_version_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="15dp"
+                android:layout_toLeftOf="@id/iv_arrow_2"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="13sp" />
+
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="@dimen/padding_12"
+            android:layout_marginRight="@dimen/padding_12"
+            android:background="#10000000" />
+
+        <TextView
+            android:id="@+id/about_us"
+            style="@style/setting_option_text_style"
+            android:text="@string/user_settings_about" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_login_out"
