--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -253,15 +253,14 @@
 
     <style name="setting_option_text_style">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_height">49dp</item>
         <item name="android:background">@color/comm_white</item>
         <item name="android:drawableRight">@drawable/arrowright</item>
-        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingRight">@dimen/padding_12</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:paddingLeft">13.5dp</item>
-        <item name="android:textColor">#323232</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:paddingLeft">@dimen/padding_12</item>
+        <item name="android:textColor">#70000000</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
     <style name="me_tab">
