--- a/app/src/main/res/layout/activity_setting_new.xml
+++ b/app/src/main/res/layout/activity_setting_new.xml
@@ -86,6 +86,19 @@
             android:layout_marginRight="@dimen/padding_12"
             android:background="#10000000" />
 
+        <TextView
+            android:id="@+id/tv_rate_setting"
+            style="@style/setting_option_text_style"
+            android:text="@string/user_settings_rate" />
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="@dimen/padding_12"
+            android:layout_marginRight="@dimen/padding_12"
+            android:background="#10000000" />
+
         <RelativeLayout
             android:id="@+id/rl_version_container"
             android:layout_width="match_parent"
