--- a/app/src/main/res/layout/dialog_live_no_money.xml
+++ b/app/src/main/res/layout/dialog_live_no_money.xml
@@ -4,109 +4,74 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_dialog_common"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/padding_12"
-    android:paddingRight="@dimen/padding_12">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_more_no_money"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableRight="@drawable/arrowright"
-        android:gravity="end"
-        android:text="更多充值" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="13dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="余额不足："
+            android:paddingBottom="13dp"
+            android:paddingTop="13dp"
+            android:text="余额不足"
             android:textColor="#646464"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_yue_no_money"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:paddingBottom="11dp"
-            android:paddingTop="11dp"
             android:textColor="#646464"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#10292e44" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_no_money"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="18dp"
+        android:layout_marginTop="18dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#10292e44" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="充值方式："
-            android:textColor="#646464"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_payway_no_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:padding="11dp"
-            android:textColor="#646464"
-            android:textSize="12sp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/arrow_down" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="充值金额："
-            android:textColor="#646464"
-            android:textSize="12sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:padding="11dp"
-            android:text="余额不足："
-            android:textColor="#646464"
-            android:textSize="12sp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="11dp"
-            android:src="@drawable/arrow_down" />
-    </LinearLayout>
-
-    <Button
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="154dp"
-        android:layout_height="31dp"
         android:layout_marginBottom="12dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/shape_yellow_btn"
-        android:text="确认充值"
-        android:textColor="#010101"
-        android:textSize="13sp" />
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/ib_wechat_no_money"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/ic_wechat_no_money"
+            android:visibility="gone" />
+
+        <ImageButton
+            android:id="@+id/ib_alipay_no_money"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:background="@null"
+            android:src="@drawable/ic_alipay_no_money"
+            android:visibility="gone" />
+    </LinearLayout>
 </LinearLayout>
