--- a/app/src/main/res/layout/activity_pkrecord.xml
+++ b/app/src/main/res/layout/activity_pkrecord.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/comm_white">
+    android:background="@color/comm_white"
+    android:overScrollMode="never">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,6 +14,8 @@
         android:orientation="vertical">
 
         <include layout="@layout/white_toolbar" />
+
+        <include layout="@layout/divider_shawdow_white" />
 
         <com.whzl.mengbi.ui.widget.view.CircleImageView
             android:id="@+id/iv_avatar"
