--- a/app/src/main/res/layout/fragment_nobility_sort.xml
+++ b/app/src/main/res/layout/fragment_nobility_sort.xml
@@ -8,5 +8,5 @@
         android:id="@+id/iv_nobility_sort"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY" />
+        android:scaleType="fitStart"/>
 </LinearLayout>
