--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -87,14 +87,16 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:hint="@string/password_hint"
+                android:inputType="textPassword"
                 android:maxLength="16"
                 android:textColorHint="#30000000"
                 android:textSize="15sp" />
 
             <ImageView
                 android:id="@+id/ib_clean_psw"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="22dp"
+                android:layout_height="13dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/selector_login_clean_psw"
                 android:visibility="gone" />
         </LinearLayout>
