--- a/app/src/main/res/layout/activity_feed_back_layout.xml
+++ b/app/src/main/res/layout/activity_feed_back_layout.xml
@@ -81,4 +81,14 @@
 
     </RelativeLayout>
 
+    <ImageView
+        android:id="@+id/iv1"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
+
+    <ImageView
+        android:id="@+id/iv2"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
 </LinearLayout>
