--- a/app/src/main/res/layout/activity_feed_back_layout.xml
+++ b/app/src/main/res/layout/activity_feed_back_layout.xml
@@ -11,10 +11,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="18dp"
         android:background="@drawable/bg_shawdow_deep"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="12dp">
 
         <EditText
             android:id="@+id/et_feedback"
@@ -29,6 +30,28 @@
             android:textColor="#70000000"
             android:textColorHint="#30000000"
             android:textSize="13sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_pic_feed_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true" />
+
+            <TextView
+                android:id="@+id/tv_limit_feed_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="12dp"
+                android:text="0/100"
+                android:textColor="#40000000"
+                android:textSize="12sp" />
+        </RelativeLayout>
     </LinearLayout>
 
     <EditText
