--- a/app/src/main/res/layout/fragment_week_star_lists.xml
+++ b/app/src/main/res/layout/fragment_week_star_lists.xml
@@ -4,129 +4,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/refresh_layout"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
 
-        <android.support.v4.widget.NestedScrollView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_week_gift"
+            android:layout_width="match_parent"
+            android:layout_height="83.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:overScrollMode="never" />
+
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:overScrollMode="never">
+            android:layout_weight="1">
 
-            <LinearLayout
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_anchor"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:focusableInTouchMode="false"
+                android:nestedScrollingEnabled="false"
+                android:overScrollMode="never" />
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
+    </LinearLayout>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_week_gift"
-                    android:layout_width="match_parent"
-                    android:layout_height="83.5dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
-                    android:overScrollMode="never" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/ic_week_anchor" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp">
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_anchor"
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        android:focusableInTouchMode="false"
-                        android:nestedScrollingEnabled="false"
-                        android:overScrollMode="never" />
-
-                    <RelativeLayout
-                        android:id="@+id/rl_empty_anchor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:visibility="gone">
-
-                        <ImageView
-                            android:id="@+id/iv_empty_anchor"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/img_empty_follow" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/iv_empty_anchor"
-                            android:layout_centerHorizontal="true"
-                            android:text="当前列表为空"
-                            android:textColor="@color/tran_black5"
-                            android:textSize="10sp" />
-                    </RelativeLayout>
-
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/ic_week_rich" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp">
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_user"
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        android:focusableInTouchMode="false"
-                        android:nestedScrollingEnabled="false"
-                        android:overScrollMode="never" />
-
-                    <RelativeLayout
-                        android:id="@+id/rl_empty_user"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:visibility="gone">
-
-                        <ImageView
-                            android:id="@+id/iv_empty_user"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/img_empty_follow" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/iv_empty_user"
-                            android:layout_centerHorizontal="true"
-                            android:text="当前列表为空"
-                            android:textColor="@color/tran_black5"
-                            android:textSize="10sp" />
-                    </RelativeLayout>
-
-
-                </RelativeLayout>
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
-
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
     <RelativeLayout
         android:id="@+id/rl_gift"
