--- a/app/src/main/res/layout/dialog_sign_success.xml
+++ b/app/src/main/res/layout/dialog_sign_success.xml
@@ -10,12 +10,19 @@
         android:layout_width="250dp"
         android:layout_height="73dp"
         android:background="@drawable/shape_bottom_white"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/tv_content_sign_success"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#70000000"
+            android:textSize="14sp"/>
     </LinearLayout>
 
     <View
@@ -37,6 +44,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
+        android:id="@+id/iv_close_sign_success"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginTop="14dp"
